srating to look like a game

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <!-- Play Again or reset All must be ready -->
          
         <button onclick="replay()">Paly Again</buttton>
+
+<footer>
+    <ul class="social-networks">
+        <il>
+            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> </a></li>
+        </il>
+    </ul>
+</footer>
     </body>
   <script src="assest/js/script.js"></script>
 </html>    
