assets/css.js/script.js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land= "en">
+<html land="en">
 
 <head>
     
@@ -9,12 +9,12 @@
 
      <title> Mini Games| Tic Tac Toe & Snake</title>
 
+     <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
+     <link href="assets/css/js/script.js">
+
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-
-     <link href="stylesheet " href="assets/css/css/style.css" text="text/css" rel="shortcut icon" type="images">
-     <link href="assets/css/js/script.js">
 
  </head>
      <br>
