--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     
      <meta charset="UTF-8">
-     <meta name="viewport" contact="width-device, initial-scale=1.0">
+     <meta name="viewport" contact="width=device-width, initial-scale=1.0">
      <meta name="descriptoin" content="Pass the Time">
 
      <title> Mini Games| Tic Tac Toe & Snake</title>
