--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
 <body>   
 
     <header>
-        <nav class="navbar navber-expand-lg navbar-Secondary bg-light text-black text-center h1">
+        <a href="index.html">
+             <h1> Welcome to visvtor </h1>
+             <h3> Losser whach the dish </h3>
+        </a>
+        <nav class="navbar navber-expand-lg bg-light text-black text-center h1">
 
-            <H1> Welcome to visvtor </H1>
+        <ul id="menu">
+
+            <li>
+                <a class="contact.html">Contact Us</a>
+            </li>
+
+            <li>
+                <a href=""
+            </li>
+
+        
+        </ul> 
         </nav>
          
 
