--- a/about.html
+++ b/about.html
@@ -2,13 +2,45 @@
 <html>
     <head>
 
+        <meta charset="UTF-8">
+        <meta name="viewport" contact="width=device-width, initial-scale=1.0">
+        <!-- <meta name="descriptoin" content="Pass the Time"> -->
+   
+        <title> Mini Games| Dicsh-Tac-Toe</title>
+   
+        <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
+        <link href="assets/css/js/index.js">
+        
+   
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+   
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     </head>
-
+<br>
     <body> 
-    <header>
+         <header>
 
-    </header>
 
+
+
+
+
+
+
+
+
+
+
+            
+
+
+
+
+        </header>
+<br>
     <footer>
     <ul class="social-networks">
         <il>
