--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,8 @@
         <title> Mini Games| Dicsh-Tac-Toe</title>
    
         <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
-        <link href="assets/css/js/index.js">
+        <link rel="stylesheet" href="assets/css/js/index.js">
         
-   
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
    
@@ -40,7 +38,7 @@
 
 
 
-            
+
 
          </header>
 <br>
