--- a/None.Bugs.html
+++ b/None.Bugs.html
@@ -29,3 +29,5 @@ Traceback (most recent call last):
     <!DOCTYPE html>
     ^
 SyntaxError: invalid syntax
+
+script.js:1 Failed to load resource: the server responded with a status of 404 ()
