--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en">
+<html land="en" class="js">
 
 <head>
     
@@ -8,6 +8,7 @@
      <!-- <meta name="descriptoin" content="Pass the Time"> -->
 
      <title> Mini Games| Dicsh-Tac-Toe</title>
+     <script type="text/index.js">documentElement.className = 'js';</script>
 
      <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
      <link rel="stylesheet" href="assets/css/js/index.js">
@@ -46,7 +47,7 @@
 
                  <li>
                      <a class="active" href="contact.html">
-                         Contact</a>
+                         Help a friend.</a>
                  </li>
 
                  <li>
