--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en" class="js">
+<html land="en" lang="js">
 
 <head>
     
@@ -8,10 +8,9 @@
      <!-- <meta name="descriptoin" content="Pass the Time"> -->
 
      <title> Mini Games| Dicsh-Tac-Toe</title>
-     <script type="text/index.js">documentElement.className = 'js';</script>
 
      <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
-     <link rel="stylesheet" href="assets/css/js/index.js">
+     <link rel="stylesheet" href="assets/css/index.js">
      
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
