--- a/about.html
+++ b/about.html
@@ -5,18 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" contact="width=device-width, initial-scale=1.0">
         <!-- <meta name="descriptoin" content="Pass the Time"> -->
-   
-        <title> Mini Games| Dicsh-Tac-Toe</title>
-   
-        <link href="stylesheet " href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
-        <link re="stylesheet" href="assets/css/js/index.js">
-        
-   
-        
+
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
    
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
+
+        <title> Mini Games| Dicsh-Tac-Toe</title>
 
     </head>
 <br>
@@ -64,4 +61,9 @@
     </ul>
     </footer>
     </body>
+
+    <script src="./index.js/index.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </html>
