--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 <h2 id="logo">Dicsh-Tac-Toe</h2>
             </a>
 
-            <nav class="navbar navbar-expand-xl navbar-light bg-light text-black">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light text-black">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"></a>
                          
