--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <h2 id="logo">Dicsh-Tac-Toe</h2>
             </a>
 
-            <nav class="navbar navbar-expand-xl navbar-light bg-light text-black ">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light text-black ">
             
                 <div class="container-fluid">
     
