--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 id="logo">Dicsh-Tac-Toe</h2>
         </a>
 
-        <nav class="navbar navbar-expand-xl navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             
             <div class="container-fluid">
 
