--- a/about.html
+++ b/about.html
@@ -5,18 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" contact="width=device-width, initial-scale=1.0">
         <!-- <meta name="descriptoin" content="Pass the Time"> -->
-
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
-   
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
         <link rel="stylesheet" href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
-
         <title> Mini Games| Dicsh-Tac-Toe</title>
 
     </head>
-<br>
+<!------------------------------------ Body ----------------------------------->
     <body> 
          <header>
 
@@ -31,8 +27,10 @@
                     <!-----------  Button is form My M1 -------------->
                          <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion">
                             <span class="navbar-toggler-icon"></span>
-                    
-                </button>
+                         </button>
+
+                    <!------------------------------------------------>
+
              <div class="collapse navbar-collapse" id="navbarNav"> 
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -60,7 +58,8 @@
             </nav>
 
         </header>
-<br>
+
+<!---------------------------------- Footer ---------------------------------->
     <footer>
 
         <ul class="social-networks">
