--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
      <meta charset="UTF-8">
      <meta name="viewport" contact="width=device-width, initial-scale=1.0">
      <!-- <meta name="descriptoin" content="Pass the Time"> -->
-
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" >
-
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
      <link rel="stylesheet" href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
-
      <title> Mini Games| Dicsh-Tac-Toe</title>
 
  </head>
@@ -66,8 +62,8 @@
          
 
     </header>
-<!----------------------------------------------------------------------------->
-<br>
+<!------------------------------------ Body ----------------------------------->
+
     <section>
     
          <div class="container" id="main div">
@@ -110,7 +106,7 @@
 
 
 
-<br>
+
 <!---------------------------------- Footer ---------------------------------->
 <footer>
 
