--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
      <meta name="viewport" contact="width=device-width, initial-scale=1.0">
      <!-- <meta name="descriptoin" content="Pass the Time"> -->
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" >
+
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
      <link rel="stylesheet" href="assets/css/style.css" text="text/css" rel="shortcut icon" type="images">
+
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+     <script type="text/javascript">emailjs.init("user_nTcvajeY7PQ5MtA4jOtXF")
+    </script>
+
      <title> Mini Games| Dicsh-Tac-Toe</title>
 
  </head>
@@ -69,9 +78,13 @@
          <div class="container" id="main div">
                <!-- was here /\id= "main div" -->
          <!-- will show X or O on the div click -->        
-         <span id="turn">Play</span> 
-
-         <div class="box" id="box1"></div>
+         <button type="button" class="btn btn-success" id="turn">Start Here</button> 
+<table>
+    <tb></tb>
+    <tb></tb>
+    <tb></tb>
+</table>
+         <div class="" id="box1"></div>
          <div class="box" id="box2"></div>
          <div class="box" id="box3"></div>
          <div class="box" id="box4"></div>
@@ -99,7 +112,7 @@
 
     <section class="pop-up">
         <p>TIE!</p>
-        <button type="button" class="btn btn-success">Paly Again</buttton> <!--  /\ onclick-->                   <!--  /\replay()-->
+        <button type="button" class="btn btn-warning">Play Again</buttton> <!--  /\ onclick-->                   <!--  /\replay()-->
 
     </section>
 
