--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
         <title> Mini Games| Dicsh-Tac-Toe</title>
 
     </head>
@@ -18,6 +19,7 @@
 
             <a href="index.html">
                 <h2 id="logo">Dicsh-Tac-Toe</h2>
+                <i class="fas fa-dice"></i>
             </a>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light text-black">
@@ -64,22 +66,18 @@
 
         <ul class="social-networks">
             <li>
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank">
-                    <i class="fab fa-facebook"></i>Facebook</a></li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener">
+                <i class="fab fa-facebook-square"></i> </a>
             </li>
     
             <li>
-                 <li>
-                    <a href="https://www.instagram.com/" target="_blank">
-                    <i class="fabfa-instagram"><i>Instagram<span></a>
-                </li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener">
+                <i class="fab fa-instagram-square"><i> </a>
             </li>
     
             <li>
-                <li>
-                    <a href="https://www.youtube.com/" target="_blank">
-                    <i class="fab fa-youtube"></i>Youtube</a><li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener">
+                <i class="fab fa-youtube-square"></i> </a>
             </li>
         </ul>
 
