--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
      <!-- <meta name="descriptoin" content="Pass the Time"> -->
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" >
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
 
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
      <link rel="stylesheet" href="assets/css/style.css">
+
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
 
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
@@ -30,6 +32,7 @@
         
         <a href="index.html">
             <h2 id="logo">Dicsh-Tac-Toe</h2>
+            <i class="fas fa-dice"></i>
         </a>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light text-right">
@@ -78,7 +81,7 @@
          <div class="container" id="main div">
                <!-- was here /\id= "main div" -->
          <!-- will show X or O on the div click -->        
-         <button type="button" class="btn btn-success" id="turn">Start Here</button> 
+         <button type="button" class="btn btn-primary" id="turn">Start Here</button> 
 
     <table align="center">
 
@@ -162,22 +165,19 @@
 
     <ul class="social-networks">
         <li>
-            <li>
                 <a href="https://www.facebook.com/" target="_blank">
-                <i class="fab fa-facebook"></i>Facebook</a></li>
+                <i class="fab fa-facebook"></i></a>
         </li>
 
         <li>
-             <li>
                 <a href="https://www.instagram.com/" target="_blank">
-                <i class="fabfa-instagram"><i>Instagram<span></a>
-            </li>
+                <i class="fab fa-instagram"><i></a>
+            
         </li>
 
         <li>
-            <li>
                 <a href="https://www.youtube.com/" target="_blank">
-                <i class="fab fa-youtube"></i>Youtube</a><li>
+                <i class="fab fa-youtube"></i></a>
         </li>
     </ul>
 
