--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                         <h2 id="logo"></h2>Home<span id="menu"></span></a>
                     </li>
 
-                     <div class="underline-circle-outer">
+                     <!--<div class="underline-circle-outer">
                           <div class="d-none d-md-block underline-circle-inner"></div>
-                     </div>
+                     </div> -->
 
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Help a friend</a>
@@ -67,12 +67,8 @@
                         <a class="nav-link active" href="about.html">About Us</a>
                     </li>
                 </ul> 
-
             </div>
-
         </nav>
-         
-
     </header>
 <!------------------------------------ Body ----------------------------------->
 
