--- a/game.html
+++ b/game.html
@@ -22,9 +22,7 @@
 
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
-     
-
-     <title> Mini Games| Dicsh-Tac-Toe</title>
+     <title> Mini Games| Dish-Tac-Toe</title>
 
  </head>
  
@@ -39,7 +37,7 @@
             <div class="container-fluid">
                 
                 <a href="index.html">
-                    <h2 id="logo">Dicsh-Tac-Toe</h2>
+                    <h2 id="logo">Dish-Tac-Toe</h2>
                     <i class="fas fa-dice"></i> </a>
 
                 <a class="navbar-brand" href="index.html"></a>
@@ -51,25 +49,30 @@
                     <div class="collapse navbar-collapse" id="navbarNav"> 
              <!--------------------------------------------->
 
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
 
+               <!--
+                <li class="nav-link">
+                   <a class="nav-link active" href="index.html">landing</a>
+               </li>
+                --> 
 
-                     <li class="nav-link">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
+               <li class="nav-link">
+                   <a class="nav-link active" href="game.html">Home</a>
+               </li>
 
-                     <!--<div class="underline-circle-outer">
-                          <div class="d-none d-md-block underline-circle-inner"></div>
-                     </div> -->
+                <!--<div class="underline-circle-outer">
+                     <div class="d-none d-md-block underline-circle-inner"></div>
+                </div> -->
 
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Most Win</a>
-                    </li>
+               <li class="nav-link">
+                   <a class="nav-link active" href="contact.html">Top Wins</a>
+               </li>
 
-                    <li>
-                        <a class="nav-link active" href="about.html">About Us</a>
-                    </li>
-                </ul> 
+               <li class="nav-link">
+                   <a class="nav-link active" href="about.html">About Us</a>
+               </li>
+           </ul> 
             </div>
         </nav>
     </header>
