added my free to ued images

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
                             <span class="navbar-toggler-icon"></span>
                          </button>
 
+                         <div class="collapse navbar-collapse" id="navbarNav"> 
                     <!------------------------------------------------>
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
@@ -52,7 +53,7 @@
                         </div> -->
    
                        <li class="nav-link">
-                           <a class="nav-link active" href="contact.html">Top Wins</a>
+                        <a class="nav-link active" href="contact.html">Top Wins</a>
                        </li>
    
                        <li class="nav-link">
@@ -66,6 +67,14 @@
 
         </header>
 
+
+
+
+
+
+
+
+        
 <!---------------------------------- Footer ---------------------------------->
     <footer>
     <div>
