--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<thml lang="en">
 
     <head>
 
@@ -71,8 +72,8 @@
 
 
 
+         <img src="image/topwin above foters/topwins.png" class="rounded-pill" alt="cortroler">
 
-         
 <!---------------------------------- Footer ---------------------------------->
         <footer>
         <div>
