--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    
     <head>
 
         <meta charset="UTF-8">
@@ -74,7 +75,7 @@
 
 
 
-        
+
 <!---------------------------------- Footer ---------------------------------->
     <footer>
     <div>
