--- a/game.html
+++ b/game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en" lang="js">
+<html land="en">
 
 <head>
     
@@ -83,12 +83,12 @@
         <!-- was here /\id= "main div" -->
         <!-- will show X or O on the div click -->        
         <button type="button" class="btn btn-primary" href="game.html" 
-         id="turn">Start Here
+         id="turn">Start
         </button> 
     </div>
     <h3> <b>Steps :</b></h3>
     <ul>
-        <li>To Start playing click the "Start Here" button</li>
+        <li>To Start playing click the "Start" button</li>
         <small>If you with like to Restart the game click on "Play Again"</small>
     </ul>
 
