--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
 
 
-         <img src="image/topwin above foters/topwins.png" class="rounded-pill" alt="cortroler">
+         <img src="image/topwin above foters/topwins.png" class="img-fluid" alt="controller">
 
 <!---------------------------------- Footer ---------------------------------->
         <footer>
@@ -81,14 +81,11 @@
                 <li>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
                 </li>
-        
-                <li>
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram-square"><i><span></a>
-                </li>
-        
                 <li>
                     <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
                 </li>
+                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                </li> 
             </ul>
         </div>
         </footer>
