--- a/game.html
+++ b/game.html
@@ -176,15 +176,11 @@
         <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
         </li>
-
-        <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram-square"><i></a>
-            
-        </li>
-
         <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
         </li>
+        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+        </li> 
     </ul>
 </div>
 
