this is not going well

--- a/None.Bugs.html
+++ b/None.Bugs.html
@@ -31,3 +31,22 @@ Traceback (most recent call last):
 SyntaxError: invalid syntax
 
 script.js:1 Failed to load resource: the server responded with a status of 404 ()
+
+
+
+
+npm start
+gitpod /workspace/M2-game-time $ npm start
+Debugger attached.
+npm ERR! code ENOENT
+npm ERR! syscall open
+npm ERR! path /workspace/M2-game-time/package.json
+npm ERR! errno -2
+npm ERR! enoent ENOENT: no such file or directory, open '/workspace/M2-game-time/package.json'
+npm ERR! enoent This is related to npm not being able to find a file.
+npm ERR! enoent 
+
+npm ERR! A complete log of this run can be found in:
+npm ERR!     /home/gitpod/.npm/_logs/2021-08-16T20_52_32_082Z-debug.log
+Waiting for the debugger to disconnect...
+gitpod /workspace/M2-game-time $ 
