--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
 
-                    <!--
+                    <!--            open only for when site need maintenance.
+
                      <li class="nav-link">
                         <a class="nav-link active" href="index.html">landing</a>
-                    </li>. -->
+                    </li>
+                  -->
 
                     <li class="nav-link">
                         <a class="nav-link active" href="game.html">Game</a>
@@ -65,7 +67,7 @@
                      </div> -->
 
                     <li class="nav-link">
-                        <a class="nav-link active" href="contact.html">Most Win</a>
+                        <a class="nav-link active" href="contact.html">Top Wins </a>
                     </li>
 
                     <li class="nav-link">
@@ -80,7 +82,7 @@
     <div id="home" class="flex-center flex-columu">
         <h2>Dish-Tac-Toe</h2>
         
-            <button type="button" class="btn" data-toggle="#exampleModalCenter">Who will it be?
+            <button type="button" class="btn btu-primary" data-toggle="#exampleModalCenter">Who will it be?
             </button>
                     <!-- Modal using bootstrap example code-->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-label="exampleModalCenterTitle" aria-hidden="true">
@@ -103,7 +105,7 @@
                 </div>
 
                 <div class="modal-footer">
-                  <a class="btn" href="game.html">Start!</a>
+                  <a class="btn" href="index.html">Start!</a>
                   
                 </div>
               </div>
