--- a/contact.html
+++ b/contact.html
@@ -64,15 +64,20 @@
          </header>
 
 
+        <section class="text-center form-container">
+            <h2 class="contact-header">How can We Help!</h2>
+            <form onsubmit="return sendMail(this);">
 
+            <input type="text" name="form-control" id="fullname" placeholder="Name:" name="name" required>
 
+            <input type="text" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email:" required>
 
+            <textarea rows="6" name="messageInformation" id="messageInformation" class="form-control" placeholder="Messeage here..."></textarea>
+            <button type="submit" class="btn form-btn btn-success">Send</button>
+            </form>
+        </section>
 
-
-
-
-
-         <img src="image/topwin above foters/topwins.png" class="img-fluid" alt="controller">
+         <img src="./image/topwin/topwins.png" class="img-fluid" alt="controller">
 
 <!---------------------------------- Footer ---------------------------------->
         <footer>
