--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,11 @@
                </ul> 
 
          </header>
-
-
+<!-------------------------------- Contact us box ----------------------------->
+        <div id="rules-mdal" class="modal hide">
+             <div class="rules-mdal-content">...</div>
+        </div>
+        <!--  how to target  /\. -->
         <section class="text-center form-container">
             <h2 class="contact-header">How can We Help!</h2>
             <form onsubmit="return sendMail(this);">
