--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                      </div> -->
 
                     <li class="nav-link">
-                        <a class="nav-link active" href="contact.html">Top Wins </a>
+                        <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
 
                     <li class="nav-link">
