--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             </form>
         </section>
 
-         <img src="./image/topwin/topwins.png" class="img-fluid" alt="controller">
+         <img src="assets/image/topwin/topwins.png" class="img-fluid" alt="controller">
 
 <!---------------------------------- Footer ---------------------------------->
         <footer>
