--- a/about.html
+++ b/about.html
@@ -59,6 +59,25 @@
                    </ul> 
                 </div>
             </nav>
+            <div id="rules-mdal" class="modal hide">
+                <div class="rules-mdal-content">
+                    <span class="close">&times;</span>
+                    <h4 class="text-center">About US</h4>
+                    <ul claas="rules-list">
+                        <li>
+                            We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
+                        </li>
+                        <li>
+                            Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
+                        </li>
+                        <li>
+                            Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
+                        </li>
+    
+                    </ul>            
+                </div>
+    
+            </div>
         </header>
 
 <!---------------------------------- Footer ---------------------------------->
@@ -79,6 +98,10 @@
     </body>
 
     <script src="./index.js/index.js"></script>
+    <script src="./index.js/dicsh.js"></script>
+          (function(){
+              dicshjs.init("user_AjPFy0pZtUzZPz0KYZaw");
+          })();
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
