--- a/game.html
+++ b/game.html
@@ -74,11 +74,10 @@
 <!------------------------------------ Body ----------------------------------->
 
     <div class="container">
-        <!-- was here /\id= "main div" -->
         <!-- will show X or O on the div click -->        
         <button type="button" class="btn btn-primary" href="game.html" id="start">Start</button> 
     </div>
-    <h3> <b>Steps :</b></h3>
+         <h3> <b>Steps :</b></h3>
     <ul>
         <li>To Start playing click the "Start" button</li>
         <small>If you with like to Restart the game click on "Play Again"</small>
@@ -108,9 +107,9 @@
     
     <section class="score">
 
-        <div class="x-score">X : <span id="x_wins">0</span></div>
+        <div class="x-score">O : <span id="x_wins">X</span></div>
         <div>SCORE</div>
-        <div class="o-score">O : <span id="o_wins">0</span></div>
+        <div class="o-score">X : <span id="o_wins">0</span></div>
 
     </section>
 
@@ -123,7 +122,7 @@
     </section>
 
 
-    <!---------------------------------- Footer ---------------------------------->
+    <!------------------------------ Footer ---------------------------------->
     <footer>
         <div>
             <ul class="social-networks">
@@ -143,6 +142,7 @@
 
     <!---------------------------------------------------------------------------->
     <script src="./index.js/index.js"></script>
+    <script src="./index.js/dicsh.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
