--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                     <h1>Who Will it Be !</h1>
                     <div class="row"></div>
                 <div class="col d-none d-sm-block">
-                    <img src="assets/image/landing/background.png" alt="tic-tac-toe" class="landing">
+                             <!---   Image \/  -->
+                    <img class="landing" src="assets/image/game/all.ages.png" alt="old gamers">
                 <div class="col">
                     <p>
                         This is small & simple way to settle an argument,
                         Dish-Tac-Toe was maid to help couples have fun with there routines,it's simply best out of three wins and loser does the dishes,kickback and relax and have some fun.
                     </p> 
-
                 </div>
 
                 <a class="btn btn-primary" type="button" href="game.html">Play</a>
