have the landing page working Properly onto the next two

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
          </header>
 <!-------------------------------- Contact us box ----------------------------->
-        <div id="rules-mdal" class="modal hide">
+        <div class="modal-hide" id="rules-mdal">
              <div class="rules-mdal-content">...</div>
         </div>
         <!--  how to target  /\. -->
