runing out of time to much to fix the x&o are to Small the contact page not working, have to find a way.

--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
             <div class="container-fluid">
             
                 <a href="index.html">
-                    <i class="fas fa-dice lg"></i>
+                    <i class="fas fa-dice"></i>
                 </a>
 
                     <a class="navbar-brand" href="index.html"></a>
@@ -122,6 +122,7 @@
 
 
     <!------------------------------ Footer ---------------------------------->
+    <br>
     <footer>
         <div>
             <ul class="social-networks">
