--- a/contact.html
+++ b/contact.html
@@ -61,19 +61,25 @@
 <!--------------------------------  About us box. ---------------------------->
 
         <section>
-            <div id="rules-mdal" class="modal hide">
+            <div id="rules-modal" class="modal hide">
                 <div class="rules-mdal-content">
                     <span class="close">&times;</span>
                         <h4 class="text-center">About US</h4>
                         <ul claas="rules-list">
                         <li>
-                         We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
+                           <p>
+                             We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
+                          </p>   
                         </li>
                         <li>
-                        Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
+                           <p>
+                              Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
+                          </p>
                         </li>
                         <li>
-                        Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
+                           <p>
+                             Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
+                          </p>
                         </li>
                     </ul>            
                 </div>
