--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
 
-                        <!-- open only for when site need maintenance.-->
+                        <!-- open only for when site need maintenance.
 
                      <li class="nav-link">
                         <a class="nav-link active" href="index.html"><span class="sr-only">(current)</span></a>
-                    </li>
+                    </li> -->
                   
 
                     <li class="nav-link">
