added Sweetalert2 to the JS for more Interactivity

--- a/contact.html
+++ b/contact.html
@@ -86,10 +86,9 @@
             </div>
         </section>
 <!-------------------------------- Contact us box ----------------------------->
-    
-          <section class="text-center form-container" >
-            
-                <h2 class="contact-header">How can We Help!</h2>
+
+<section class="container" >
+    <h2 class="contact-header">How can We Help!</h2>
             <form onsubmit="return sendMail(this);">
 
                  <input type="text" class="form-control" id="fullname" placeholder="Name:" name="name" required/>
