--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a class="nav-link active" id="rules-link">About Us</a>
+                        <a class="nav-link active" id="rules-link"></a>
                     </li>
                 </ul> 
             </div>
@@ -65,7 +65,7 @@
         <div id="rules-modal" class="modal hide">
             <div class="rules-mdal-content">
                 <span class="close">&times;</span>
-                    <h4 class="text-center">About US</h4>
+                    <h4 class="text-center"></h4>
                     <ul claas="rules-list">
                         <li>
                         <p>
@@ -129,7 +129,7 @@
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
         </li>
         <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+                <a href=https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
         </li>
         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
         </li> 
