--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                    </li>
 
                    <li class="nav-link">
-                       <a class="nav-link active" id="rules-link" href="about.html">About Us</a>
+                       <a class="nav-link active" id="rules-link" href="about.html"></a>
                    </li>
                </ul> 
             </nav>
@@ -64,7 +64,7 @@
             <div id="rules-modal" class="modal hide">
                 <div class="rules-mdal-content">
                     <span class="close">&times;</span>
-                        <h4 class="text-center">About US</h4>
+                        <h4 class="text-center"></h4>
                         <ul claas="rules-list">
                         <li>
                            <p>
