--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-link">
-                            <a class="nav-link" id="rules-link">About Us</a>
+                            <a class="nav-link" id="rules-link"></a>
                         </li>
                     </ul> 
                 </div>
