--- a/game.html
+++ b/game.html
@@ -114,15 +114,16 @@
         </div>
         <div class="clear"></div>
     </div>
-</div>
+
     <div class="col-sm-12 col-md-4">
-        <i class="fas fa-times turn-icon high" id="circle"></i>
+        <i class="far fa-times turn-icon high" id="circle"></i>
         <h3>"Turn"></h3>
     </div>
     <section class="score">
         <div class="x-score">O : <span id="x_wins">X</span></div>
         <div>SCORE</div>
         <div class="o-score">X : <span id="o_wins">0</span></div>
+    </div>
 </section>
 
 <section class="pop-up" id="click">
