--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,6 @@
                    <li class="nav-link">
                        <a class="nav-link active" href="contact.html">Contact</a>
                    </li>
-                   <li class="nav-link">
-                       <a class="nav-link active" id="rules-link" href="about.html"></a>
-                   </li>
                </ul> 
             </nav>
         </header>
@@ -107,7 +104,8 @@
             </ul>
         </div>
     </footer>
-
+    <script src="./assets/js/index.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
