--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
                 <li class="nav-link">
                     <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
-
-                    <li class="nav-link">
-                        <a class="nav-link active" id="rules-link"></a>
-                    </li>
                 </ul> 
             </div>
         </nav>
@@ -102,8 +98,7 @@
                 <a class="btn btn-primary" type="button" href="game.html">Play</a>
                 <a class="btn btn-primary" type="button" href="contact.html">Contact</a>
 
-                </div>
-                </div>    
+                </div>   
             </div>
         </div>
     </div>
@@ -118,13 +113,16 @@
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
         </li>
         <li>
-                <a href=https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
         </li>
-        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+        <li>
+               <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
         </li> 
     </ul>
 </div>
 </footer>
+<script src="./assets/js/index.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 </script>
 </body> 
