debug lines of code

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<thml lang="en">
+<html lang="en">
 
     <head>
-
        <meta charset="UTF-8">
        <meta name="viewport" contact="width=device-width, initial-scale=1.0">
        <meta name="descriptoin" content="Pass the Time">
@@ -18,59 +17,49 @@
         <title> Mini Games| Dish-Tac-Toe</title>
     </head>
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light text-black">
-                <div class="container-fluid">
-                    <a href="index.html"><span class="sr-only">(current)</span>
-                        <h2 id="logo">Dish-Tac-Toe</h2>
-                        <i class="fas fa-dice"></i>
-                    </a>
+<body>
+  <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light text-black">
+        <div class="container-fluid">
+          <a href="index.html"><span class="sr-only">(current)</span>
+              <h2 id="logo">Dish-Tac-Toe</h2>
+                  <i class="fas fa-dice"></i></a>
                     <a class="navbar-brand" href="index.html"></a>
-                    
-                 <!-----------  Button is form My M1 -------------->
                         <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion">
-                        <span class="navbar-toggler-icon"></span>                
+                        <span class="navbar-toggler-icon"><span>                
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav"> 
-                
-                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
-                   <li class="nav-link">
-                       <a class="nav-link active" href="game.html">Game</a>
-                   </li>
-                   <li class="nav-link">
-                       <a class="nav-link active" href="contact.html">Contact</a>
-                   </li>
-               </ul> 
-            </nav>
-        </header>
+                       <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+                       <li class="nav-link">
+                 <a class="nav-link active" href="game.html">Game</a>
+              </li>
+          <li class="nav-link">
+        <a class="nav-link active" href="contact.html">Contact<a>
+      </li>
+    </ul> 
+  </nav>
+</header>
 <!---  About us box. --->
 
-        <section>
-            <div id="rules-modal" class="modal hide">
-                <div class="rules-mdal-content">
-                    <span class="close">&times;</span>
-                        <h4 class="text-center"></h4>
-                        <ul claas="rules-list">
-                        <li>
-                           <p>
-                             We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
-                          </p>   
-                        </li>
-                        <li>
-                           <p>
-                              Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
-                          </p>
-                        </li>
-                        <li>
-                           <p>
-                             Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
-                          </p>
-                        </li>
-                    </ul>            
-                </div>
-            </div>
-        </section>
+<section>
+    <div id="rules-modal">
+         <div class="rules-mdal-content">
+            <span class="close">&times;</span>
+                <h4 class="text-center"></h4>
+                    <ul claas="rules-list">
+                    <p>
+                    We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
+                    </p>   
+                    <p>
+                    Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
+                    </p>
+                    <p>
+                    Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
+                    </p>
+            </ul>            
+        </div>
+    </div>
+</section>
 <!--- Contact us box --->
 
         <section class="container" >
