fix the  issue on homepage Display

--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" contact="width=device-width, initial-scale=1.0">
-     <meta name="descriptoin" content="Pass the Time">
+     <meta name="description" content="Pass the Time">
      <meta name="keywords" content="problem solving">
-
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
-
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
      <link rel="stylesheet" href="assets/css/style.css">
-
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
-
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
      <title>Dish-Tac-Toe</title> 
@@ -31,100 +26,68 @@
     <div class="container-fluid"> 
         <a href="index.html">
             <h2 id="logo">Dish-Tac-Toe</h2>
-        <i class="fas fa-dice"></i></a>
-    <a class="navbar-brand" href="index.html">
-</a>
-                    
-<!---  Button is form Bootrap --->
-<button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion" inlign="text-right">
-    <span class="navbar-toggler-icon"></span>                
+                <i class="fas fa-dice"></i></a>
+                     <a class="navbar-brand" href="index.html">
+                         </a>
+                    <!---  Button is form Boostrap --->
+                    <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion" inlign="text-right">
+                    <span class="navbar-toggler-icon"><span>                
                     </button>
-        <div class="collapse navbar-collapse" id="navbarNav"> 
-
-<ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
-    <li class="nav-link">
-        <a class="nav-link active" href="game.html">Game</a>
-            </li>
-                <li class="nav-link">
+                    <div class="collapse navbar-collapse" id="navbarNav"> 
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+                    <li class="nav-link">
+                    <a class="nav-link active" href="game.html">Game</a>
+                    </li>
+                    <li class="nav-link">
                     <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
                 </ul> 
             </div>
-        </nav>
-</header>
-<!--- About us box. --->
-
-<section>
-        <div id="rules-modal" class="modal hide">
-            <div class="rules-mdal-content">
-                <span class="close">&times;</span>
-                    <h4 class="text-center"></h4>
-                    <ul claas="rules-list">
-                        <li>
-                        <p>
-                        We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
-                        </p>   
-                        </li>
-                        <li>
-                        <p>
-                        Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
-                        </p>
-                        </li>
-                        <li>
-                        <p>
-                        Basic rules apply you have three "X" or "O" to match for a winner, we plan to implement more games in the future such as the legendary snake game!
-                        </p>
-                    </li>
-                </ul>            
-            </div>
         </div>
-</section>
-<!--- Body --->
+    </nav>
+</header>
 
-<section>
-        <div class="jumbotron-fluid" id="jumbotron">
-            <div class="container text-center main-container">
-                <div id="home" class="">
-                    <h1>Who Will it Be !</h1>
-                    <div class="row"></div>
+<!--- Body --->
+<section class="container text-center main-container">
+    <div class="row">
+        <div class="col-12">
+            <div id="home">
+                <h1 class="title">Who Will it Be !</h1>
                     <img class="landing" src="assets/image/game/all.ages.png" alt="old gamers">
-                <div class="col">
-                    <h6>
+                    <h6 class="title">
                         This is a simple way to settle an argument,
                         Dish-Tac-Toe was maid to help couples have fun with there day to day routines, it's simply best out of three Wins! and loser does the dishes,
                         kickback and relax let's have some fun.
-                    </h6> 
-                </div>
-                <a class="btn btn-primary" type="button" href="game.html">Play</a>
-                <a class="btn btn-primary" type="button" href="contact.html">Contact</a>
-
+                    </h6>
+                    <a class="btn btn-primary" type="button" href="game.html">Play</a>
+                    <a class="btn btn-primary" type="button" href="contact.html">Contact</a>
                 </div>   
             </div>
         </div>
     </div>
-        
+ </div>   
 </section>
 <!---- Footer ---->
 
 <footer>
-<div>
-    <ul class="social-networks">
-        <li>
+    <div>
+        <ul class="social-networks">
+               <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
-        </li>
-        <li>
+                </li>
+                <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
-        </li>
-        <li>
+                </li>
+                <li>
                <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-        </li> 
-    </ul>
-</div>
+                </li> 
+        </ul>
+    </div>
 </footer>
-<script src="./assets/js/index.js"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-</script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body> 
+
 </html>    
 
